fixed contrast in updates, pages, textbooks, and group configurations

--- a/cms/static/sass/elements/_controls.scss
+++ b/cms/static/sass/elements/_controls.scss
@@ -111,7 +111,7 @@
 %btn-secondary-gray {
   @extend %ui-btn-secondary;
   border-color: $gray-l3;
-  color: $gray-l1;
+  color: $gray-d1;
 
   &:hover, &:active {
     background: $gray-l3;
