--- a/cms/static/sass/elements/_modal-window.scss
+++ b/cms/static/sass/elements/_modal-window.scss
@@ -191,7 +191,7 @@
       }
 
       a {
-        color: $blue;
+        color: $blue-d2;
 
         &:hover {
           color: $blue-s2;
